syntax = "proto3";
package proto.auth;

message Credentials {
  string username = 1;
  string password = 2;
}

message Session {
  // expiration time can be worked out client side since our jwt holds
  // the expiration time.
  string user_id = 1;
  string jwt = 2;
  string refresh_token = 3;
}

message LogoutStatus {
  string user_id = 1;
  bool success = 2;
  string msg = 3;
}

message JWT {
  string token = 1;
}

message ValidityStatus {
  bool valid = 1;
}

service Authentication {
  rpc Login (Credentials) returns (Session);
  rpc Refresh (Session) returns (Session);
  rpc ValidateJWT (JWT) returns (ValidityStatus);
  rpc Logout (Session) returns (LogoutStatus);
}

message Permission {
  string user_id = 1;
  int32 perm_lvl = 2;
}

message CheckStatus {
  bool HasPermission = 1;
}

service Authorisation {
  rpc Check (Permission) returns (CheckStatus);
  //rpc AddPermission () returns ();
  //rpc RemovePermission () returns ();
}
